# 2019-DAT109-Modelldrevet-utvikling-3

./: README.md
Bookstore/BookStore2/: test.bpm
Bookstore/BookStore2/Model/DataModel/: Properties.wr
Bookstore/BookStore2/Model/WebModel/: Properties.wr
Bookstore/BookStore2/Model/WebModel/sv1/: Properties.wr
Bookstore/BookStore2/Model/WebModel/sv2/: Properties.wr  page6.wr  page7.wr  page8.wr
Bookstore/BookStore2/Model/WebModel/sv3/: Properties.wr  page10.wr  page9.wr
Bookstore/BookStore2/Process/: Default.bpm
EXPO/.Temp~/: .deployPath  .multiFileIdConversionMap  DB.xml  GenerationConfig.xml  SQL.xml  Warnings.xml
EXPO/DBScripts/: Database_190502_092542.sql
EXPO/Model/DataModel/: Properties.wr
EXPO/Model/WebModel/mov1/: Properties.wr
EXPO/Model/WebModel/mov2/: Properties.wr
EXPO/Model/WebModel/sv1/: Properties.wr
UMPLE/: Diskusjon  README.md
UMPLE/ClassDiagram/: ClassDiagram.txt  classdiagram.webarchive
UMPLE/ClassDiagram/c++/: CMakeLists.txt  model_Main.cpp
UMPLE/ClassDiagram/java/: Arrangement.java  Arrangementdeltagelse.java  Brukergruppe.java  Prosjekt.java  Studie.java
UMPLE/ClassDiagram/php/: Bedrift.php  Brukergruppe.php
UMPLE/StateMachine/: StateMachine.txt
UMPLE/StateMachine/c++/: model_Model.h
UMPLE/StateMachine/java/: EXPO.java
UMPLE/StateMachine/php/: EXPO.php
UMPLE/c++/: model_Model.h
UMPLE/java/: Bedrift.java  Bruker.java  Institutt.java  Stemme.java  Stemmemetode.java
UMPLE/php/: Arrangement.php  Arrangementdeltagelse.php  Bruker.php  Institutt.php  Prosjekt.php  Stemme.php  Stemmemetode.php  Studie.php
(+12 files in other folders)
